# security_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: demo.yaml  openai_contriever.yaml
results/: final_summary.md
scripts/: aggregate_results.py  prepare_nq_real.py  run_demo.sh
src/rag_poison_defense.egg-info/: PKG-INFO  SOURCES.txt
src/ragstack/: __init__.py  attack.py  cli.py  config.py  data.py  evaluator.py  llm.py  metrics.py  retriever.py  search.py  types.py  utils.py
src/ragstack/defenses/: ragdefender.py  robustrag.py
